# tauri-sd-image-viewer2

./: .gitignore  .prettierrc  CLAUDE.md  LICENSE  PERFORMANCE_OPTIMIZATION.md  README.ja.md  README.md  TYPE_SYNC_GUIDE.md  package.json  svelte.config.js  vite.config.ts
.github/workflows/: ci.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  clipboard_api.rs  common.rs  exif_api.rs  exif_info.rs  image_api.rs  image_file_info.rs  image_file_lock_service.rs  image_info.rs  image_loader.rs  image_metadata_info.rs  image_processor.rs  lib.rs  main.rs  png_handler.rs  sd_parameters.rs  thumbnail.rs  types.rs
src-tauri/src/image_handlers/: generic_processor.rs  mod.rs  png_processor.rs
src-tauri/src/image_reader_api/: commands.rs  mod.rs  service.rs
src-tauri/src/metadata_api/: cache.rs  commands.rs  exif_handler.rs  image_metadata.rs  metadata_info.rs  mod.rs  png_handler.rs  sd_parameters.rs  service.rs  xmp_handler.rs
src-tauri/src/thumbnail/: cache.rs  generator.rs  metadata_handler.rs  mod.rs
src-tauri/src/thumbnail_api/: cache.rs  cache_manager.rs  commands.rs  config.rs  generator.rs  generator_config.rs  handler.rs  metadata_cache.rs  mod.rs  service.rs  thumbnail_service.rs
src-tauri/src/types/: image_types.rs  mod.rs  thumbnail_types.rs
src/lib/: BottomToolbar.svelte  FilterPanel.svelte  GridPage.svelte  GridView.svelte  HeaderBar.svelte  Image.svelte  ImageCanvas.svelte  ImageDisplay.svelte  ImageGrid.svelte  ImageInfoPanel.svelte  ImageThumbnail.svelte  ImageViewer.svelte  MetadataPanel.svelte  NavigationButtons.svelte  OptionsModal.svelte  TestViewerPage.svelte  TestWelcome.svelte  ThumbnailGrid.svelte  Toast.svelte  ToolbarOverlay.svelte  ViewerPage.svelte  ViewerUIOverlay.svelte  WelcomeScreen.svelte  image-loader.ts  mime-type.ts  types.ts
src/lib/components/: OptionsModal.svelte  RatingComponent.svelte  StatsDisplay.svelte  ToolBar.svelte
src/lib/hooks/: use-cleanup.svelte  use-cleanup.ts  use-grid-view.ts  use-image-viewer.ts  use-keyboard-navigation.ts  use-resizer.svelte  use-resizer.ts
src/lib/image/: image-loader.ts  image-manipulation.svelte.ts  image-manipulation.ts  mime-type.ts  types.ts  utils.ts
src/lib/services/: app-navigation.ts  app-transitions.ts  async-thumbnail-queue.ts  auto-nav-store.svelte.ts  clipboard.ts  dialog-service.ts  dialog.ts  drag-and-drop.ts  global-thumbnail-service.ts  image-actions.ts  image-cache-service.ts  image-cache-store.ts  image-cache.ts  image-directory-service.ts  image-file-access-queue-service.svelte.ts  image-loader.ts  image-metadata-service.ts  image-navigation.ts  image-queue.ts  image-registry.ts  keyboard-shortcut.ts  loading-status-config.ts  logger.ts  metadata-queue-service.svelte.ts  metadata-queue.ts  metadata-registry.svelte.ts  metadata-registry.ts  metadata-service.svelte.ts  metadata-store.ts  mime-type.ts  navigation-service.svelte.ts  navigation-service.ts  navigation-store.ts  tag-aggregation-service.ts  tag-aggregation.ts  thumbnail-queue-manager.ts  thumbnail-queue-service.svelte.ts  thumbnail-queue.ts  thumbnail-registry.ts  thumbnail-service.svelte.ts  (+4 more)
src/lib/stores/: app-store.svelte.ts  app-store.ts  directory-image-paths-store.svelte.ts  filter-store.svelte.ts  filtered-images-paths-store.svelte.ts  filtered-images-store.svelte.ts  grid-store.svelte.ts  grid-ui-store.svelte.ts  image-metadata-store.svelte.ts  image-selection-store.svelte.ts  image-store.svelte.ts  image-view-store.svelte.ts  metadata-panel-store.svelte.ts  metadata-queue.ts  metadata-registry.svelte.ts  tag-store.svelte.ts  (+10 more)
src/routes/: +layout.svelte  +page.svelte
(+64 files in other folders)
