[package]
name = "tauri-sd-image-viewer"
version = "2.0.0"
description = "Tauri SD Image Viewer"
authors = ["tenpaMk2"]
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_sd_image_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
webp = "0.3"
sha2 = "0.10"
hex = "0.4"
rayon = "1.10"
png = "0.17"
regex = "1.10"
once_cell = "1.19"
little_exif = "0.6.14"
serde_json = "1.0.142"
memmap2 = "0.9"
tauri-plugin-os = "2"

# macOS クリップボード機能用の依存関係
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"

